# AI_concept_organization

hello/world/: CMakeLists.txt  main.cpp
